# realtime-sensor-platform

./: .gitignore  README.md  SYSTEM_MAP.md
Analysis/: OVERVIEW.md  config.py  main.py  pyproject.toml  requirements.txt
Analysis/drills/: __init__.py  base.py
Analysis/drills/behdisc/: __init__.py  algorithm.py
Analysis/drills/dissociation/: __init__.py  algorithm.py
Analysis/drills/pvt/: __init__.py  algorithm.py
Analysis/routers/: __init__.py  dissociation.py  epoch.py  health.py  sessions.py  trials.py
Analysis/signals/: __init__.py  extractor.py  hr.py  hrv.py  motion.py  pupil.py  registry.py
Backend/: .gitignore  OVERVIEW.md  batch_router.py  config.py  config.toml  inlet_manager.py  pyproject.toml  replay_engine.py  session_service.py  stream_meta_parser.py  websocket_bridge.py
Backend/api/: contract.md  message_types.js  message_types.py
Backend/services/: live_service.py  replay_service.py
Frontend/: OVERVIEW.md  index.html
Frontend/css/: analysis.css  charts.css  layout.css  pages.css  variables.css
Frontend/css/pages/: debrief.css  live-intel.css  live-monitor.css  replay.css  topbar.css  workspace.css
Frontend/js/: app.js
Frontend/js/analysis/: analysis-app.js  api-client.js  epoch-chart.js  stats-panel.js  trial-sidebar.js
Frontend/js/charts/: chart-card.js  chart-factory.js  chart-gaze.js  chart-hr.js  chart-hrv.js  chart-line.js  chart-motion.js  chart-numeric.js  chart-pupil.js  chart-scatter2d.js  chart-virtra.js  stream-registry.js
Frontend/js/core/: event-bus.js  mode-manager.js  plugin-registry.js  sidebar.js  stream-router.js  timeline.js  topbar-manager.js
Frontend/js/intel/: behdisc-engine.js  live-intel-ui.js
Frontend/js/pages/: debrief.js  live-intel.js  live-monitor.js  replay-sessions.js  workspace.js
Frontend/js/plugins/: event-log.js  event-ticker.js  gauge.js  scatter.js  waveform.js
Frontend/js/shared/: api.js  constants.js  format.js
Testing/: README.md  lsl_simulator.py  pyproject.toml  simulator.py
markdowns/: LabReplay_Dissociation_Architecture.md  api_specification.md  architecture_and_roadmap.md  dashboard-design-principles.md  idea.md  improvements.md
total-recall/: .gitignore  BuildAll.bat  OVERVIEW.md  README.md  RunPythonTotalRecallPoetry.bat  config.toml  config_mgr.py  guiapp.py  lsl_metadata.py  lsl_replay_publisher.py  main.py  playback_feed_summary.py  pyproject.toml  python_setup.md  replay_sample.py  sql_record_fetcher.py  util.py
total-recall/gui/: app.py
(+4 files in other folders)
